fix: reduce more pods

--- a/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -168,7 +168,9 @@ spec:
         spec:
           metadataPool:
             replicated:
-              size: 3
+              # single node
+              # size: 3
+              size: 1
           dataPools:
             - failureDomain: host
               replicated:
