--- a/k8s/apps/cert-manager/certificates/ks.yaml
+++ b/k8s/apps/cert-manager/certificates/ks.yaml
@@ -15,7 +15,7 @@ spec:
   prune: false
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   wait: true
   interval: 30m
   timeout: 5m
@@ -39,7 +39,7 @@ spec:
   prune: false
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   wait: true
   interval: 30m
   timeout: 5m
