--- a/k8s/apps/cert-manager/cert-manager/ks.yaml
+++ b/k8s/apps/cert-manager/cert-manager/ks.yaml
@@ -13,7 +13,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   wait: true
   interval: 30m
   timeout: 5m
@@ -36,7 +36,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   wait: true
   interval: 30m
   timeout: 5m
