--- a/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -35,7 +35,8 @@ spec:
       enabled: true
     resources:
       requests:
-        memory: 128Mi
+        # memory: 128Mi
+        memory: null
         # cpu: 50m
         cpu: null
       limits: {}
