feat: why are you so fat rook

--- a/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -40,3 +40,233 @@ spec:
         # cpu: 50m
         cpu: null
       limits: {}
+    csiRBDProvisionerResource: |
+      - name : csi-provisioner
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 100m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-resizer
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 100m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-attacher
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 100m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-snapshotter
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 100m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-rbdplugin
+        resource:
+          requests:
+            # memory: 512Mi
+            memory: null
+          limits:
+            memory: 1Gi
+      - name : csi-omap-generator
+        resource:
+          requests:
+            # memory: 512Mi
+            # cpu: 250m
+            memory: null
+            cpu: null
+          limits:
+            memory: 1Gi
+      - name : liveness-prometheus
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 50m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+    # -- CEPH CSI RBD plugin resource requirement list
+    # @default -- see values.yaml
+    csiRBDPluginResource: |
+      - name : driver-registrar
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 50m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-rbdplugin
+        resource:
+          requests:
+            # memory: 512Mi
+            # cpu: 250m
+            memory: null
+            cpu: null
+          limits:
+            memory: 1Gi
+      - name : liveness-prometheus
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 50m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+    # -- CEPH CSI CephFS provisioner resource requirement list
+    # @default -- see values.yaml
+    csiCephFSProvisionerResource: |
+      - name : csi-provisioner
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 100m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-resizer
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 100m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-attacher
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 100m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-snapshotter
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 100m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-cephfsplugin
+        resource:
+          requests:
+            # memory: 512Mi
+            # cpu: 250m
+            memory: null
+            cpu: null
+          limits:
+            memory: 1Gi
+      - name : liveness-prometheus
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 50m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+    # -- CEPH CSI CephFS plugin resource requirement list
+    # @default -- see values.yaml
+    csiCephFSPluginResource: |
+      - name : driver-registrar
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 50m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-cephfsplugin
+        resource:
+          requests:
+            # memory: 512Mi
+            # cpu: 250m
+            memory: null
+            cpu: null
+          limits:
+            memory: 1Gi
+      - name : liveness-prometheus
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 50m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+    # -- CEPH CSI NFS provisioner resource requirement list
+    # @default -- see values.yaml
+    csiNFSProvisionerResource: |
+      - name : csi-provisioner
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 100m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-nfsplugin
+        resource:
+          requests:
+            # memory: 512Mi
+            # cpu: 250m
+            memory: null
+            cpu: null
+          limits:
+            memory: 1Gi
+      - name : csi-attacher
+        resource:
+          requests:
+            # memory: 512Mi
+            # cpu: 250m
+            memory: null
+            cpu: null
+          limits:
+            memory: 1Gi
+    # -- CEPH CSI NFS plugin resource requirement list
+    # @default -- see values.yaml
+    csiNFSPluginResource: |
+      - name : driver-registrar
+        resource:
+          requests:
+            # memory: 128Mi
+            # cpu: 50m
+            memory: null
+            cpu: null
+          limits:
+            memory: 256Mi
+      - name : csi-nfsplugin
+        resource:
+          requests:
+            # memory: 512Mi
+            # cpu: 250m
+            memory: null
+            cpu: null
+          limits:
+            memory: 1Gi
