--- a/k8s/apps/cert-manager/certificates/app/pushsecret.yaml
+++ b/k8s/apps/cert-manager/certificates/app/pushsecret.yaml
@@ -4,6 +4,8 @@ kind: PushSecret
 metadata:
   name: "${SECRET_DOMAIN//./-}-tls"
 spec:
+  updatePolicy: Replace # Policy to overwrite existing secrets in the provider on sync
+  deletionPolicy: Delete # the provider' secret will be deleted if the PushSecret is deleted
   refreshInterval: 1m
   secretStoreRefs:
     - name: onepassword-connect
