feat: cloudnative-pg fat too

--- a/k8s/apps/database/cloudnative-pg/app/helmrelease.yaml
+++ b/k8s/apps/database/cloudnative-pg/app/helmrelease.yaml
@@ -27,6 +27,10 @@ spec:
     - name: openebs
       namespace: openebs-system
   values:
+    resources:
+      requests:
+        cpu: null
+        memory: null
     crds:
       create: true
     monitoring:
