fix: fat database

--- a/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -21,6 +21,9 @@ spec:
     inProgress: false
     reusePVC: true
   resources:
+    requests:
+      cpu: null
+      memory: null
     limits:
       memory: 4Gi
   monitoring:
