feat: free more resources

--- a/k8s/apps/external-secrets/onepassword-connect/app/helmrelease.yaml
+++ b/k8s/apps/external-secrets/onepassword-connect/app/helmrelease.yaml
@@ -68,6 +68,9 @@ spec:
             resources: &resources
               # requests:
               #   cpu: 10m
+              requests:
+                cpu: null
+                memory: null
               limits:
                 memory: 256M
           sync:
