--- a/k8s/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/k8s/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -92,6 +92,9 @@ spec:
         resources:
           # requests:
           #   cpu: 100m
+          requests:
+            cpu: null
+            memory: null
           limits:
             memory: 1500Mi
         storageSpec:
