--- a/k8s/apps/default/minio/app/helmrelease.yaml
+++ b/k8s/apps/default/minio/app/helmrelease.yaml
@@ -63,6 +63,9 @@ spec:
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
             resources:
+              requests:
+                cpu: null
+                memory: null
               limits:
                 memory: 2Gi
     defaultPodOptions:
