--- a/k8s/apps/network/nginx/internal/helmrelease.yaml
+++ b/k8s/apps/network/nginx/internal/helmrelease.yaml
@@ -71,6 +71,9 @@ spec:
       resources:
         # requests:
         #   cpu: 100m
+        requests:
+          cpu: null
+          memory: null
         limits:
           memory: 500Mi
     defaultBackend:
