--- a/k8s/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/cilium/app/helmrelease.yaml
@@ -52,7 +52,7 @@ spec:
         ingress:
           enabled: true
           className: internal
-          hosts: ["hubble"]
+          hosts: ["hubble.${SECRET_DOMAIN}"]
     operator:
       prometheus:
         enabled: true
