--- a/k8s/apps/default/jellyseerr/ks.yaml
+++ b/k8s/apps/default/jellyseerr/ks.yaml
@@ -9,6 +9,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: external-secrets-stores
   path: ./k8s/apps/default/jellyseerr/app
   prune: true
   sourceRef:
