fix: dependsOn and remove requests

--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -58,6 +58,9 @@ spec:
             resources:
               # requests:
               #   cpu: 10m
+              requests:
+                cpu: null
+                memory: null
               limits:
                 memory: 256Mi
     defaultPodOptions:
