--- a/k8s/apps/observability/kustomization.yaml
+++ b/k8s/apps/observability/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./prometheus-operator-crds/ks.yaml
+  - ./kube-prometheus-stack/ks.yaml
+  - ./loki/ks.yaml
+  - ./promtail/ks.yaml
