--- a/k8s/apps/cert-manager/certificates/ks.yaml
+++ b/k8s/apps/cert-manager/certificates/ks.yaml
@@ -24,7 +24,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app certificates
+  name: &app certificates-export
   namespace: flux-system
 spec:
   targetNamespace: cert-manager
@@ -35,7 +35,7 @@ spec:
     - name: certificates-import
     - name: cert-manager-issuers
     - name: external-secrets-stores
-  path: ./k8s/apps/cert-manager/certificates/app
+  path: ./k8s/apps/cert-manager/certificates/export
   prune: false
   sourceRef:
     kind: GitRepository
