--- a/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
             # memory: 128Mi
             # cpu: 100m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 256Mi
       - name : csi-resizer
@@ -56,7 +56,7 @@ spec:
             # memory: 128Mi
             # cpu: 100m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 256Mi
       - name : csi-attacher
@@ -65,7 +65,7 @@ spec:
             # memory: 128Mi
             # cpu: 100m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 256Mi
       - name : csi-snapshotter
@@ -74,7 +74,7 @@ spec:
             # memory: 128Mi
             # cpu: 100m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 256Mi
       - name : csi-rbdplugin
@@ -90,7 +90,7 @@ spec:
             # memory: 512Mi
             # cpu: 250m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 1Gi
       - name : liveness-prometheus
@@ -99,7 +99,7 @@ spec:
             # memory: 128Mi
             # cpu: 50m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
     # -- CEPH CSI RBD plugin resource requirement list
@@ -111,7 +111,7 @@ spec:
             # memory: 128Mi
             # cpu: 50m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
       - name : csi-rbdplugin
@@ -120,7 +120,7 @@ spec:
             # memory: 512Mi
             # cpu: 250m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 1Gi
       - name : liveness-prometheus
@@ -129,7 +129,7 @@ spec:
             # memory: 128Mi
             # cpu: 50m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
     # -- CEPH CSI CephFS provisioner resource requirement list
@@ -141,7 +141,7 @@ spec:
             # memory: 128Mi
             # cpu: 100m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
       - name : csi-resizer
@@ -150,7 +150,7 @@ spec:
             # memory: 128Mi
             # cpu: 100m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
       - name : csi-attacher
@@ -159,7 +159,7 @@ spec:
             # memory: 128Mi
             # cpu: 100m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
       - name : csi-snapshotter
@@ -168,7 +168,7 @@ spec:
             # memory: 128Mi
             # cpu: 100m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
       - name : csi-cephfsplugin
@@ -177,7 +177,7 @@ spec:
             # memory: 512Mi
             # cpu: 250m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 1Gi
       - name : liveness-prometheus
@@ -186,7 +186,7 @@ spec:
             # memory: 128Mi
             # cpu: 50m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
     # -- CEPH CSI CephFS plugin resource requirement list
@@ -198,7 +198,7 @@ spec:
             # memory: 128Mi
             # cpu: 50m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
       - name : csi-cephfsplugin
@@ -207,7 +207,7 @@ spec:
             # memory: 512Mi
             # cpu: 250m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 1Gi
       - name : liveness-prometheus
@@ -216,7 +216,7 @@ spec:
             # memory: 128Mi
             # cpu: 50m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
     # -- CEPH CSI NFS provisioner resource requirement list
@@ -228,7 +228,7 @@ spec:
             # memory: 128Mi
             # cpu: 100m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
       - name : csi-nfsplugin
@@ -237,7 +237,7 @@ spec:
             # memory: 512Mi
             # cpu: 250m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 1Gi
       - name : csi-attacher
@@ -246,7 +246,7 @@ spec:
             # memory: 512Mi
             # cpu: 250m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 1Gi
     # -- CEPH CSI NFS plugin resource requirement list
@@ -258,7 +258,7 @@ spec:
             # memory: 128Mi
             # cpu: 50m
             memory: null
-            cpu: null
+            cpu: 10m
           limits:
             memory: 256Mi
       - name : csi-nfsplugin
@@ -267,6 +267,6 @@ spec:
             # memory: 512Mi
             # cpu: 250m
             memory: null
-            cpu: null
+            cpu: 50m
           limits:
             memory: 1Gi
