--- a/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -22,8 +22,8 @@ spec:
     reusePVC: true
   resources:
     requests:
-      cpu: null
-      memory: null
+      cpu: 10m
+      memory: 10Mi
     limits:
       memory: 4Gi
   monitoring:
