--- a/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -36,9 +36,9 @@ spec:
     resources:
       requests:
         # memory: 128Mi
-        memory: null
+        memory: 10Mi
         # cpu: 50m
-        cpu: null
+        cpu: 10m
       limits: {}
     csiRBDProvisionerResource: |
       - name : csi-provisioner
@@ -46,7 +46,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 100m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 256Mi
@@ -55,7 +55,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 100m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 256Mi
@@ -64,7 +64,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 100m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 256Mi
@@ -73,7 +73,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 100m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 256Mi
@@ -81,7 +81,7 @@ spec:
         resource:
           requests:
             # memory: 512Mi
-            memory: null
+            memory: 10Mi
           limits:
             memory: 1Gi
       - name : csi-omap-generator
@@ -89,7 +89,7 @@ spec:
           requests:
             # memory: 512Mi
             # cpu: 250m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 1Gi
@@ -98,7 +98,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 50m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -110,7 +110,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 50m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -119,7 +119,7 @@ spec:
           requests:
             # memory: 512Mi
             # cpu: 250m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 1Gi
@@ -128,7 +128,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 50m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -140,7 +140,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 100m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -149,7 +149,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 100m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -158,7 +158,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 100m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -167,7 +167,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 100m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -176,7 +176,7 @@ spec:
           requests:
             # memory: 512Mi
             # cpu: 250m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 1Gi
@@ -185,7 +185,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 50m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -197,7 +197,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 50m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -206,7 +206,7 @@ spec:
           requests:
             # memory: 512Mi
             # cpu: 250m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 1Gi
@@ -215,7 +215,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 50m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -227,7 +227,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 100m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -236,7 +236,7 @@ spec:
           requests:
             # memory: 512Mi
             # cpu: 250m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 1Gi
@@ -245,7 +245,7 @@ spec:
           requests:
             # memory: 512Mi
             # cpu: 250m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 1Gi
@@ -257,7 +257,7 @@ spec:
           requests:
             # memory: 128Mi
             # cpu: 50m
-            memory: null
+            memory: 10Mi
             cpu: 10m
           limits:
             memory: 256Mi
@@ -266,7 +266,7 @@ spec:
           requests:
             # memory: 512Mi
             # cpu: 250m
-            memory: null
+            memory: 10Mi
             cpu: 50m
           limits:
             memory: 1Gi
