--- a/k8s/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/k8s/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -93,8 +93,8 @@ spec:
           # requests:
           #   cpu: 100m
           requests:
-            cpu: null
-            memory: null
+            cpu: 10m
+            memory: 10Mi
           limits:
             memory: 1500Mi
         storageSpec:
