--- a/k8s/apps/volsync-system/volsync/app/helmrelease.yaml
+++ b/k8s/apps/volsync-system/volsync/app/helmrelease.yaml
@@ -25,6 +25,10 @@ spec:
     - name: snapshot-controller
       namespace: volsync-system
   values:
+    resources:
+      requests:
+        cpu: 10m
+        memory: 10Mi
     manageCRDs: true
     metrics:
       disableAuth: true
