free: as much as we can

--- a/k8s/apps/kube-system/coredns/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/coredns/app/helmrelease.yaml
@@ -20,6 +20,10 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  values:
+    resources:
+      requests:
+        cpu: 10m
   valuesFrom:
     - kind: ConfigMap
       name: coredns-helm-values
