--- a/k8s/apps/kube-system/kubelet-csr-approver/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/kubelet-csr-approver/app/helmrelease.yaml
@@ -23,6 +23,9 @@ spec:
     - kind: ConfigMap
       name: kubelet-csr-approver-helm-values
   values:
+    resources:
+      requests:
+        cpu: 10m
     metrics:
       enable: true
       serviceMonitor:
