--- a/k8s/apps/kube-system/node-feature-discovery/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/node-feature-discovery/app/helmrelease.yaml
@@ -24,6 +24,10 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    master:
+      resources:
+        requests:
+          cpu: 10m
     worker:
       config:
         core:
