--- a/.taskfiles/volsync/Taskfile.yaml
+++ b/.taskfiles/volsync/Taskfile.yaml
@@ -18,7 +18,7 @@ x-vars: &vars
   ACCESS_MODES: '{{.ACCESS_MODES}}'
 vars:
   VOLSYNC_RESOURCES_DIR: '{{.ROOT_DIR}}/.taskfiles/volsync/resources'
-  MINIJINJA_CMD: '{{.ROOT_DIR}}/.bin/minijinja --env --trim-blocks --lstrip-blocks --autoescape=none'
+  MINIJINJA_CMD: '{{ .HOME }}/.cargo/bin/minijinja-cli --env --trim-blocks --lstrip-blocks --autoescape=none --strict'
 tasks:
   state-*:
     desc: Suspend or Resume Volsync
