--- a/k8s/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/cilium/app/helmrelease.yaml
@@ -23,6 +23,9 @@ spec:
     - kind: ConfigMap
       name: cilium-helm-values
   values:
+    resources:
+      requests:
+        cpu: 10m
     hubble:
       enabled: true
       metrics:
