--- a/k8s/apps/kube-system/intel-device-plugin/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/intel-device-plugin/app/helmrelease.yaml
@@ -26,3 +26,7 @@ spec:
   dependsOn:
     - name: node-feature-discovery
       namespace: kube-system
+  values:
+    resources:
+      requests:
+        cpu: 10m
