--- a/k8s/apps/kube-system/metrics-server/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/metrics-server/app/helmrelease.yaml
@@ -20,6 +20,9 @@ spec:
     remediation:
       retries: 3
   values:
+    resources:
+      requests:
+        cpu: 10m
     args:
       - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
       - --kubelet-use-node-status-port
