--- a/k8s/flux/config/flux.yaml
+++ b/k8s/flux/config/flux.yaml
@@ -62,6 +62,8 @@ spec:
               containers:
                 - name: manager
                   resources:
+                    requests:
+                      cpu: 10m
                     limits:
                       cpu: 2000m
                       memory: 2Gi
