--- a/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
       namespace: volsync-system
   values:
     csi:
-      cephFSKernelMountOptions: ms_mode=prefer-crc
+      # cephFSKernelMountOptions: ms_mode=prefer-crc
       enableLiveness: true
       serviceMonitor:
         enabled: true
