--- a/k8s/bootstrap/talos/talconfig.yaml
+++ b/k8s/bootstrap/talos/talconfig.yaml
@@ -46,6 +46,7 @@ patches:
   - "@./patches/global/sysctl.yaml"
   - "@./patches/global/udev.yaml"
   - "@./patches/global/nfs.yaml"
+  - "@./patches/global/disable-kexec.yaml"
 # Controller patches
 controlPlane:
   patches:
